# Calculparall_Para

./: .gitignore  CHP  CMakeCache.txt  CMakeLists.txt  Concatrenation.cpp  Makefile  Matrix.cpp  Matrix.h  README.md  charge.cpp  charge.h  data.txt  error_log.txt  functions.cpp  functions.h  main.cpp  plot.txt  settings.cpp  settings.h  solver.cpp  solver.h
data/: data.txt
plots/: plot.txt  plot_solutions.gp
src/: Matrix.cpp  Matrix.h  charge.cpp  charge.h  functions.cpp  functions.h  settings.cpp  settings.h  solver.cpp  solver.h
tests/: CMakeLists.txt  readme.md  tests.cpp
